// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Penalty 스냅 샷 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "paddingBottom": 25,
        "paddingLeft": 30,
        "paddingRight": 30,
        "paddingTop": 25,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
        Object {
          "marginBottom": 12.5,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "black",
            "fontSize": 15,
            "fontWeight": "800",
          },
        ]
      }
    >
      금액
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#687684",
            "fontSize": 15,
            "fontWeight": "800",
          },
        ]
      }
    >
      1000
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "black",
            "fontSize": 15,
            "fontWeight": "800",
          },
        ]
      }
    >
      날짜
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#687684",
            "fontSize": 15,
            "fontWeight": "800",
          },
        ]
      }
    >
      2022-01-01
    </Text>
  </View>
</View>
`;

exports[`PenaltyEditable 스냅 샷 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "paddingBottom": 25,
        "paddingLeft": 30,
        "paddingRight": 30,
        "paddingTop": 25,
      },
    ]
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 20,
        "opacity": 1,
      }
    }
  >
    <View
      accessibilityIgnoresInvertColors={true}
      style={
        Array [
          Object {
            "height": 30,
            "marginRight": 15,
            "width": 30,
          },
        ]
      }
    >
      <Image
        borderRadius={50}
        resizeMode="cover"
        source={
          Object {
            "uri": "https://scontent-ssn1-1.cdninstagram.com/v/t51.2885-15/296105988_735019344242739_8809340187758356692_n.jpg?stp=dst-jpg_e35_p480x480&_nc_ht=scontent-ssn1-1.cdninstagram.com&_nc_cat=103&_nc_ohc=8FKKENxkJq0AX_C-dmH&tn=BEmipNgrm38iVWSi&edm=ALQROFkBAAAA&ccb=7-5&ig_cache_key=Mjg5Mjg3OTkzOTcxNjI2OTk2Nw%3D%3D.2-ccb7-5&oh=00_AT--zRwVOwpBF0Q2WOcAZMTTTZdHO2xVJvDleUXOK-uKGw&oe=63214EBE&_nc_sid=30a2ef",
          }
        }
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": 30,
              "width": 30,
            },
            undefined,
          ]
        }
      />
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "black",
            "fontSize": 22.5,
            "fontWeight": "800",
          },
        ]
      }
    >
      hyojin
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
        Object {
          "marginBottom": 12.5,
          "marginTop": 5,
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "black",
            "fontSize": 15,
            "fontWeight": "800",
          },
        ]
      }
    >
      금액
    </Text>
    <Text
      style={
        Array [
          Object {
            "color": "#687684",
            "fontSize": 15,
            "fontWeight": "800",
          },
        ]
      }
    >
      1000
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "space-between",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "color": "black",
            "fontSize": 15,
            "fontWeight": "800",
          },
        ]
      }
    >
      payed
    </Text>
    <View
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#DFF3F1",
          "borderRadius": 20,
          "height": 30,
          "justifyContent": "center",
          "opacity": 1,
          "width": 30,
        }
      }
    >
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          Array [
            Object {
              "color": "#10DDC2",
              "fontSize": 18,
            },
            undefined,
            Object {
              "fontFamily": "Ionicons",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            Object {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`Pray 스냅샷 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "flexDirection": "row",
        "paddingBottom": 25,
        "paddingLeft": 30,
        "paddingRight": 30,
        "paddingTop": 25,
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#687684",
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
          "fontSize": 15,
          "fontWeight": "500",
          "marginRight": 20,
        },
      ]
    }
  >
    hello hyojin
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#687684",
          "fontSize": 15,
          "fontWeight": "800",
        },
      ]
    }
  >
    2022-09-05 11:30:02
  </Text>
</View>
`;

exports[`PrayEditable 스냅샷 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "paddingBottom": 15,
        "paddingLeft": 20,
        "paddingRight": 20,
        "paddingTop": 20,
      },
    ]
  }
>
  <View
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginBottom": 20,
        "opacity": 1,
      }
    }
  >
    <View
      accessibilityIgnoresInvertColors={true}
      style={
        Array [
          Object {
            "height": 30,
            "marginRight": 15,
            "width": 30,
          },
        ]
      }
    >
      <Image
        borderRadius={50}
        resizeMode="cover"
        source={
          Object {
            "uri": "https://scontent-ssn1-1.cdninstagram.com/v/t51.2885-15/296105988_735019344242739_8809340187758356692_n.jpg?stp=dst-jpg_e35_p480x480&_nc_ht=scontent-ssn1-1.cdninstagram.com&_nc_cat=103&_nc_ohc=8FKKENxkJq0AX_C-dmH&tn=BEmipNgrm38iVWSi&edm=ALQROFkBAAAA&ccb=7-5&ig_cache_key=Mjg5Mjg3OTkzOTcxNjI2OTk2Nw%3D%3D.2-ccb7-5&oh=00_AT--zRwVOwpBF0Q2WOcAZMTTTZdHO2xVJvDleUXOK-uKGw&oe=63214EBE&_nc_sid=30a2ef",
          }
        }
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
            },
            Object {
              "height": 30,
              "width": 30,
            },
            undefined,
          ]
        }
      />
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "black",
            "fontSize": 22.5,
            "fontWeight": "800",
          },
        ]
      }
    >
      hyojin
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "justifyContent": "center",
          "marginBottom": 20,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 20,
        },
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#10ddc2",
          "borderRadius": 50,
          "height": 30,
          "justifyContent": "center",
          "marginBottom": 0,
          "marginLeft": 15,
          "marginRight": 15,
          "marginTop": 0,
          "opacity": 1,
          "width": 100,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "white",
              "fontSize": 12,
              "fontWeight": "700",
            },
          ]
        }
      >
        추가하기
      </Text>
    </View>
  </View>
</View>
`;

exports[`Tweet 스냅샷 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
        "paddingBottom": 0,
        "paddingLeft": 20,
        "paddingRight": 20,
        "paddingTop": 40,
      },
      Object {
        "minHeight": 500,
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "marginRight": 20,
          "width": 50,
        },
      ]
    }
  >
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "borderColor": "#eff5fb",
            "borderRadius": 50,
            "borderStyle": "solid",
            "borderWidth": 1,
            "width": 52,
          },
        ]
      }
    >
      <View
        accessibilityIgnoresInvertColors={true}
        style={
          Array [
            Object {
              "height": 50,
              "width": 50,
            },
          ]
        }
      >
        <Image
          borderRadius={50}
          resizeMode="cover"
          source={
            Object {
              "uri": "https://scontent-ssn1-1.cdninstagram.com/v/t51.2885-15/296105988_735019344242739_8809340187758356692_n.jpg?stp=dst-jpg_e35_p480x480&_nc_ht=scontent-ssn1-1.cdninstagram.com&_nc_cat=103&_nc_ohc=8FKKENxkJq0AX_C-dmH&tn=BEmipNgrm38iVWSi&edm=ALQROFkBAAAA&ccb=7-5&ig_cache_key=Mjg5Mjg3OTkzOTcxNjI2OTk2Nw%3D%3D.2-ccb7-5&oh=00_AT--zRwVOwpBF0Q2WOcAZMTTTZdHO2xVJvDleUXOK-uKGw&oe=63214EBE&_nc_sid=30a2ef",
            }
          }
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "height": 50,
                "width": 50,
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
  </View>
  <View
    style={
      Array [
        Object {
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
          },
        ]
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "black",
              "fontSize": 20,
              "fontWeight": "800",
            },
          ]
        }
      >
        hyojin
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#687684",
              "fontSize": 12,
              "fontWeight": "500",
              "marginBottom": 0,
              "marginLeft": 7.5,
              "marginRight": 7.5,
              "marginTop": 0,
            },
          ]
        }
      >
        @
        KAKAO
         · 
        11 days ago
      </Text>
    </View>
    <TextInput
      editable={false}
      multiline={true}
      numberOfLines={10}
      style={
        Array [
          Object {
            "borderBottomWidth": 1,
            "borderColor": "#ced5dc",
            "borderStyle": "solid",
            "color": "black",
            "height": 80,
            "marginTop": 10,
          },
          Object {
            "textAlignVertical": "top",
          },
        ]
      }
      value="hyojin saranghae"
    />
    <View
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "borderColor": "#e5e5e5",
          "borderRadius": 30,
          "borderWidth": 0.5,
          "marginTop": 30,
          "opacity": 1,
        }
      }
    >
      <View
        accessibilityIgnoresInvertColors={true}
        style={
          Array [
            Object {
              "flexBasis": 0,
              "flexGrow": 1,
              "flexShrink": 1,
              "height": 280,
            },
          ]
        }
      >
        <Image
          borderRadius={30}
          defaultSource={
            Object {
              "testUri": "../../../assets/img/loading.png",
            }
          }
          resizeMode="cover"
          source={
            Object {
              "uri": "undefined/https://scontent-ssn1-1.cdninstagram.com/v/t51.2885-15/296105988_735019344242739_8809340187758356692_n.jpg?stp=dst-jpg_e35_p480x480&_nc_ht=scontent-ssn1-1.cdninstagram.com&_nc_cat=103&_nc_ohc=8FKKENxkJq0AX_C-dmH&tn=BEmipNgrm38iVWSi&edm=ALQROFkBAAAA&ccb=7-5&ig_cache_key=Mjg5Mjg3OTkzOTcxNjI2OTk2Nw%3D%3D.2-ccb7-5&oh=00_AT--zRwVOwpBF0Q2WOcAZMTTTZdHO2xVJvDleUXOK-uKGw&oe=63214EBE&_nc_sid=30a2ef",
            }
          }
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              },
              Object {
                "height": 280,
                "width": undefined,
              },
              undefined,
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;
